--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   , "dependencies": {
       "express": "2.5.0"
     , "jade": ">= 0.0.1"
+    , "eyes": ">= 0.1.6"
+    , "vows": ">= 0.5.13"
+    , "sinon": ">= 1.2.0"
   }
 }
